--- a/src/sass/format.sass
+++ b/src/sass/format.sass
@@ -4,6 +4,8 @@ $error-color: #E34449
 $warning-color: #F28F3F
 $success-color: #62C480
 
+$big-shadow: 0 5px 25px 3px rgba(black, 0.15)
+
 $modular-scale-ratio: $minor-third
 
 // Shades percentages
