--- a/views/components/index.phtml
+++ b/views/components/index.phtml
@@ -1,5 +1,8 @@
 <div class="main wrapper">
   <h2>Componentes</h2>
+  <a href="/mail.php" target="_blank">
+    <h4>Mail Template</h4>
+  </a>
   <h4>Íconos</h4>
   <p>
     Ocupamos los íconos de Material Design, <a href="https://material.io/icons/" target="_blank">aquí</a> hay una lista de todos y cómo usarlos en el HTML.
