--- a/views/forms/index.phtml
+++ b/views/forms/index.phtml
@@ -69,14 +69,14 @@
         </div>
         <hr class="y-separator">
         <div class="patients-pie-chart-container sdown">
-          <canvas id="patients-chart" class="patients-pie-chart"></canvas>
+          <canvas id="patients-chart" class="patients-pie-chart" data-chart="[40, 19, 42, 17, 56, 12, 38]"></canvas>
         </div>
         <div class="clearfix">
           <div class="float-col col-30 gender-pie-chart-container">
-            <canvas id="pie-chart" class="gender-pie-chart"></canvas>
+            <canvas id="pie-chart" class="gender-pie-chart" data-chart="[522, 323]"></canvas>
           </div>
           <div class="float-col col-70 age-pie-chart-container">
-            <canvas id="age-chart" class="gender-pie-chart"></canvas>
+            <canvas id="age-chart" class="gender-pie-chart" data-chart='{ "women": [12, 19, 3, 17, 6, 3, 7], "men": [2, 29, 5, 5, 2, 3, 10] }'></canvas>
           </div>
         </div>
       </main>
