--- a/views/forms/new-question.phtml
+++ b/views/forms/new-question.phtml
@@ -35,10 +35,10 @@
                     &#xE25D;
                   </div>
                   <div class="sright">
-                    <input type="text" class="form-input" placeholder="Valor">
+                    <input type="text" class="form-input" placeholder="Valor" data-value>
                   </div>
                   <div class="flex-1">
-                    <input type="text" class="form-input" placeholder="Opción">
+                    <input type="text" class="form-input" placeholder="Opción" data-option>
                   </div>
                 </div>
               </div>
