--- a/views/users/index.phtml
+++ b/views/users/index.phtml
@@ -3,7 +3,14 @@
     <div class="head-flex">
       <h2 class="border-title flex-1">Usuarios</h2>
       <div>
-        <a href="/users/new" class="btn--primary">Nuevo Usuario</a>
+        <a href="/users/push" class="btn--secondary with-icon sright">
+          <span>Enviar notificación</span>
+          <i class="material-icons">&#xE7F4;</i>
+        </a>
+        <a href="/users/new" class="btn--primary with-icon">
+          <span>Nuevo Usuario</span>
+          <i class="material-icons">&#xE7FE;</i>
+        </a>
       </div>
     </div>
     <div class="aside-content-container">
