Format change in options

--- a/views/forms/new-question.phtml
+++ b/views/forms/new-question.phtml
@@ -35,10 +35,10 @@
                     &#xE25D;
                   </div>
                   <div class="sright">
-                    <input type="text" class="form-input" placeholder="Valor" data-value>
+                    <input type="text" class="form-input" maxlength="255" placeholder="Respuesta" data-reply>
                   </div>
                   <div class="flex-1">
-                    <input type="text" class="form-input" placeholder="Opción" data-option>
+                    <input type="text" class="form-input" maxlength="255" placeholder="Valor (opcional)" data-value>
                   </div>
                 </div>
               </div>
