--- a/src/sass/forms.sass
+++ b/src/sass/forms.sass
@@ -111,6 +111,9 @@ label, input[type=checkbox]
   box-shadow: 0 0 0 3px rgba(black, $p4)
   margin: 3px 0.5rem
   vertical-align: middle
+  cursor: pointer
+  &:focus
+    outline: none
 
 .color-input-hidden
   position: absolute
