--- a/views/forms/new.phtml
+++ b/views/forms/new.phtml
@@ -192,20 +192,21 @@
                 </div>
                 <div class="tab" data-tabule-tab>
                   <div class="form-row">
-                    <label data-input-color>
+                    <label>
                       <span class="flexbox">
                         <span class="form-label flex-1">Color de fondo</span>
-                        <input id="af-bg-color" name="bg-color" type="color" class="color-input-hidden" value="#FFFFFF" data-input data-appform-style-trigger>
-                        <span class="color-input-impostor" data-impostor></span>
+                        <input id="af-bg-color" class="jscolor color-input-impostor" value="#FFFFFF" data-appform-style-trigger>
+                        <!-- <input id="af-bg-color" name="bg-color" type="color" class="color-input-hidden" value="#FFFFFF" data-input data-appform-style-trigger> -->
                       </span>
                     </label>
                   </div>
                   <div class="form-row">
-                    <label data-input-color>
+                    <label><!-- <label data-input-color> -->
                       <span class="flexbox">
                         <span class="form-label flex-1">Color de realce</span>
-                        <input id="af-accent-color" name="accent-color" type="color" class="color-input-hidden" value="#397CEB" data-input data-appform-style-trigger>
-                        <span class="color-input-impostor" data-impostor></span>
+                        <input id="af-accent-color" class="jscolor color-input-impostor" value="#397CEB" data-appform-style-trigger>
+                        <!-- <input id="af-accent-color" name="accent-color" type="color" class="color-input-hidden" value="#397CEB" data-input data-appform-style-trigger> -->
+                        <!-- <span class="color-input-impostor" data-impostor></span> -->
                       </span>
                     </label>
                   </div>
