--- a/views/forms/new.phtml
+++ b/views/forms/new.phtml
@@ -111,6 +111,18 @@
                     <input id="form-data" type="hidden" name="form-data">
                     <div class="form-row">
                       <label>
+                        <span class="form-label">Inicio</span>
+                        <input type="text" class="form-input" data-date-input>
+                      </label>
+                    </div>
+                    <div class="form-row">
+                      <label>
+                        <span class="form-label">Fin</span>
+                        <input type="text" class="form-input" data-date-input>
+                      </label>
+                    </div>
+                    <div class="form-row">
+                      <label>
                         <span class="form-label">Nombre del formulario</span>
                         <input type="text" class="form-input" data-synced-input="af-title" placeholder="Nombre del formulario">
                       </label>
@@ -133,18 +145,6 @@
                           </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="form-row">
-                      <label>
-                        <span class="form-label">Nombre del formulario</span>
-                        <input type="text" class="form-input">
-                      </label>
-                    </div>
-                    <div class="form-row">
-                      <label>
-                        <span class="form-label">Nombre del formulario</span>
-                        <input type="text" class="form-input">
-                      </label>
                     </div>
                   </form>
                 </div>
