--- a/src/sass/format.sass
+++ b/src/sass/format.sass
@@ -27,7 +27,7 @@ html, body
   height: 100%
 
 html
-  font-family: 'Proxima Nova', sans-serif
+  font-family: 'Montserrat', sans-serif
   font-size: 16px
   box-sizing: border-box
   color: rgba(black, $p2)
