--- a/views/_layout.phtml
+++ b/views/_layout.phtml
@@ -6,20 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="/assets/styles/app.css">
-  <!-- TypeKit Fonts -->
-  <?php if ($_SERVER['HTTP_HOST'] !== 'localhost:1111'): ?>
-    <script>
-      (function(d) {
-        var config = {
-          kitId: 'sdg5qhf',
-          scriptTimeout: 3000,
-          async: true
-        },
-        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-      })(document);
-    </script>
-  <?php endif; ?>
-  <!-- / TypeKit Fonts -->
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
+  <!-- / Google Fonts -->
 </head>
 <body data-path-name="<?= $path_name ?>">
   <?php if ($path !== ''): ?>
