Date range validation ready

--- a/src/sass/modules.sass
+++ b/src/sass/modules.sass
@@ -194,6 +194,7 @@
   text-align: center
   box-shadow: $big-shadow
   border-radius: 2px
+  z-index: 2
 
 .rd-container-attachment
   position: absolute
@@ -256,6 +257,7 @@
 .rd-day-disabled
   cursor: default
   color: rgba(black, $p4)
+  background-color: transparent !important
 
 .rd-time
   position: relative
