--- a/views/forms/new.phtml
+++ b/views/forms/new.phtml
@@ -19,7 +19,7 @@
   }';
 
   $radio_json = '{
-    "id": 2,
+    "id": 3,
     "type": "radio",
     "question": "¿Qué describiría mejor su estado?",
     "options": [
@@ -31,7 +31,7 @@
   }';
 
   $select_json = '{
-    "id": 2,
+    "id": 4,
     "type": "select",
     "question": "Seleccione una opción",
     "options": [
@@ -42,7 +42,7 @@
   }';
 
   $scale_json = '{
-    "id": 3,
+    "id": 5,
     "type": "scale",
     "question": "En una escala de 1 a 5, ¿Cómo se siente con el medicamento?",
     "options": [
@@ -55,7 +55,7 @@
   }';
 
   $yes_no_json = '{
-    "id": 4,
+    "id": 6,
     "type": "yes-no",
     "question": "¿Has tenido algún malestar después de tomar el medicamento?",
     "options": [
@@ -65,9 +65,15 @@
   }';
 
   $osdi_json = '{
-    "id": 1,
+    "id": 7,
     "type": "osdi",
     "question": "Prueba OSDI"
+  }';
+
+  $pain_json = '{
+    "id": 8,
+    "type": "pain",
+    "question": "Escala de dolor"
   }';
 
 ?>
@@ -166,29 +172,33 @@
                       <i class="material-icons" title="Número">&#xE400;</i>
                       <span class="question">¿Cuántos años tiene?</span>
                     </div>
-                    <div class="questions-list-item js-source" title="Selección" data-id="1" data-question-definition="<?= htmlspecialchars($select_json) ?>">
+                    <div class="questions-list-item js-source" title="Selección" data-id="2" data-question-definition="<?= htmlspecialchars($select_json) ?>">
                       <i class="material-icons" title="Selección">arrow_drop_down_circle</i>
                       <span class="question">Seleccione una opción</span>
                     </div>
-                    <div class="questions-list-item js-source" title="Opción Múltiple" data-id="2" data-question-definition="<?= htmlspecialchars($multiple_json) ?>">
+                    <div class="questions-list-item js-source" title="Opción Múltiple" data-id="3" data-question-definition="<?= htmlspecialchars($multiple_json) ?>">
                       <i class="material-icons">check_box</i>
                       <span class="question">¿Qué mejoras ha presentado con el tratamiento?</span>
                     </div>
-                    <div class="questions-list-item js-source" title="Opciones" data-id="6" data-question-definition="<?= htmlspecialchars($radio_json) ?>">
+                    <div class="questions-list-item js-source" title="Opciones" data-id="4" data-question-definition="<?= htmlspecialchars($radio_json) ?>">
                       <i class="material-icons">radio_button_checked</i>
                       <span class="question">¿Qué describiría mejor su estado?</span>
                     </div>
-                    <div class="questions-list-item js-source" title="Escala Lineal" data-id="3" data-question-definition="<?= htmlspecialchars($scale_json) ?>">
+                    <div class="questions-list-item js-source" title="Escala Lineal" data-id="5" data-question-definition="<?= htmlspecialchars($scale_json) ?>">
                       <i class="material-icons">&#xE260;</i>
                       <span class="question">En una escala de 1 a 5, ¿cómo se siente con el medicamento?</span>
                     </div>
-                    <div class="questions-list-item js-source" title="Si/No" data-id="4" data-question-definition="<?= htmlspecialchars($yes_no_json) ?>">
+                    <div class="questions-list-item js-source" title="Si/No" data-id="6" data-question-definition="<?= htmlspecialchars($yes_no_json) ?>">
                       <i class="material-icons">&#xE3F1;</i>
                       <span class="question">¿Has tenido algún malestar después de tomar el medicamento?</span>
                     </div>
-                    <div class="questions-list-item js-source" title="OSDI" data-id="5" data-question-definition="<?= htmlspecialchars($osdi_json) ?>">
+                    <div class="questions-list-item js-source" title="OSDI" data-id="7" data-question-definition="<?= htmlspecialchars($osdi_json) ?>">
                       <i class="material-icons">&#xE417;</i>
                       <span class="question">Prueba OSDI</span>
+                    </div>
+                    <div class="questions-list-item js-source" title="OSDI" data-id="8" data-question-definition="<?= htmlspecialchars($pain_json) ?>">
+                      <i class="material-icons">sentiment_dissatisfied</i>
+                      <span class="question">Escala de dolor</span>
                     </div>
                   </div>
                 </div>
@@ -405,6 +415,20 @@
     </div>
   </div>
 <?= '</script>' ?>
+<?= '<script id="pain-quest-tmpl" type="x-tmpl-mustache">' ?>
+  <div class="appform-row" data-id="<% id %>" data-question-definition="<% definition %>">
+    <input type="hidden" name="<% visit_block %>[]" value="<% id %>">
+    <div class="relative">
+      <label>
+        <span class="af-label"><% question %></span>
+        <input type="range" class="af-range" name="<% id %>" min="0" max="100">
+      </label>
+      <div class="drag-handle material-icons">
+        &#xE25D;
+      </div>
+    </div>
+  </div>
+<?= '</script>' ?>
 <?= '<script id="styles-quest-tmpl" type="x-tmpl-mustache">' ?>
   .appform-row.gu-mirror {
     background-color: <% bg %>;
@@ -449,6 +473,24 @@
   }
   .af-radio input[type=radio]:checked + .af-radio-active + .af-radio-label {
     color: <% accent_text %>;
+  }
+  .af-range::-webkit-slider-runnable-track {
+    background-color: <% input_bg %>;
+  }
+  .af-range::-moz-range-track {
+    background-color: <% input_bg %>;
+  }
+  .af-range::-ms-fill-upper {
+    background-color: <% input_bg %>;
+  }
+  .af-range::-webkit-slider-thumb {
+    background-color: <% accent %>;
+  }
+  .af-range::-moz-range-thumb {
+    background-color: <% accent %>;
+  }
+  .af-range::-ms-thumb {
+    background-color: <% accent %>;
   }
 <?= '</script>' ?>
 
