Added open special options

--- a/src/sass/appform.sass
+++ b/src/sass/appform.sass
@@ -378,6 +378,12 @@ $accent-color: $primary-color
   input[type=radio]
     display: none
 
+// Conditionals
+.quest-conditional
+  display: none
+  &.show
+    display: block
+
 
 
 // %appform-input
