Added open special options to new qustion view

--- a/views/forms/new-question.phtml
+++ b/views/forms/new-question.phtml
@@ -15,6 +15,8 @@
               <option value="number">Número</option>
               <option value="muliple" data-options="true">Opción Múltiple</option>
               <option value="scale" data-options="true">Escala Linear</option>
+              <option value="muliple" data-options="true" data-options-open="true">Radio (Abierta)</option>
+              <option value="muliple" data-options="true" data-options-open="true">Si/No (Abierta)</option>
               <option value="yes-no">Si/No</option>
             </select>
           </label>
@@ -49,6 +51,12 @@
               </button>
             </div>
           </div>
+        </div>
+        <div id="quest-options-open" class="form-row">
+          <label>
+            <span class="form-label">Abierta</span>
+            <input type="text" class="form-input">
+          </label>
         </div>
         <div class="form-row txt-center">
           <button type="submit" class="btn--primary">Guardar</button>
