Added filesize validation

--- a/views/forms/new.phtml
+++ b/views/forms/new.phtml
@@ -167,7 +167,7 @@
                     </div>
                     <div class="form-row">
                       <div data-image-input class="image-input clean">
-                        <input id="med-logo-in" type="file" class="hidden-file-input">
+                        <input id="med-logo-in" type="file" class="hidden-file-input" data-val-filesize="1">
                         <span class="form-label">Logo Medicamento</span>
                         <div class="image-placeholder">
                           <img class="image">
