description field in form creation

--- a/views/forms/new.phtml
+++ b/views/forms/new.phtml
@@ -166,6 +166,12 @@
                       </label>
                     </div>
                     <div class="form-row">
+                      <label>
+                        <span class="form-label">Descripción del formulario</span>
+                        <textarea class="form-textarea" data-synced-input="af-desc" placeholder="Descripción del formulario"></textarea>
+                      </label>
+                    </div>
+                    <div class="form-row">
                       <div data-image-input class="image-input clean">
                         <input id="med-logo-in" type="file" class="hidden-file-input" data-val-filesize="1">
                         <span class="form-label">Logo Medicamento</span>
@@ -280,6 +286,7 @@
               </div>
               <hr class="af-separator">
               <h2 id="af-title" class="af-title clean">Nombre del formulario</h2>
+              <p id="af-desc" class="af-title clean">Descripción del formulario</p>
             </header>
             <div class="visit-block-container">
               <div class="visit-block-legend">Visita 1</div>
