--- a/src/sass/appform.sass
+++ b/src/sass/appform.sass
@@ -79,6 +79,7 @@ $accent-color: $primary-color
 .af-title
   margin: 0
   margin-top: 1rem
+  color: rgba(0,0,0,0.87)
   &.clean
     color: rgba(black, $p4)
 
