Added preview for content editable divs

--- a/views/forms/new.phtml
+++ b/views/forms/new.phtml
@@ -162,13 +162,17 @@
                     <div class="form-row">
                       <label>
                         <span class="form-label">Nombre del formulario</span>
-                        <input type="text" class="form-input" data-synced-input="af-title" placeholder="Nombre del formulario">
+                        <div>
+                          <textarea placeholder="Nombre del formulario" data-synced-input="af-title" data-woofmark></textarea>
+                        </div>
                       </label>
                     </div>
                     <div class="form-row">
                       <label>
                         <span class="form-label">Descripción del formulario</span>
-                        <textarea class="form-textarea" data-synced-input="af-desc" placeholder="Descripción del formulario"></textarea>
+                        <div>
+                          <textarea placeholder="Descripción del formulario" data-synced-input="af-desc" data-woofmark></textarea>
+                        </div>
                       </label>
                     </div>
                     <div class="form-row">
