--- a/views/users/push.phtml
+++ b/views/users/push.phtml
@@ -17,7 +17,7 @@
         <div class="form-row">
           <div>
             <span class="form-label">Contenido</span>
-            <div>
+            <div class="sdown">
               <textarea id="push-message" name="content" data-woofmark></textarea>
             </div>
           </div>
