alow wysiwig only on form description

--- a/views/forms/new.phtml
+++ b/views/forms/new.phtml
@@ -162,9 +162,7 @@
                     <div class="form-row">
                       <label>
                         <span class="form-label">Nombre del formulario</span>
-                        <div>
-                          <textarea placeholder="Nombre del formulario" data-synced-input="af-title" data-woofmark></textarea>
-                        </div>
+                        <input type="text" class="form-input" data-synced-input="af-title" placeholder="Nombre del formulario">
                       </label>
                     </div>
                     <div class="form-row">
