Wysiwygs textareas now give HTML

--- a/views/forms/new.phtml
+++ b/views/forms/new.phtml
@@ -169,7 +169,7 @@
                       <label>
                         <span class="form-label">Descripción del formulario</span>
                         <div>
-                          <textarea placeholder="Descripción del formulario" data-synced-input="af-desc" data-woofmark></textarea>
+                          <textarea name="description" placeholder="Descripción del formulario" data-synced-input="af-desc" data-woofmark></textarea>
                         </div>
                       </label>
                     </div>
